# onenet_esp32

./: Onenet移植手册.md  README.md
sample_project/: idf_5.1.2.code-workspace  sdkconfig  sdkconfig.old
sample_project/components/onenet_esp32/: CMakeLists.txt
sample_project/components/onenet_esp32/inc/: onenet_esp32.h
sample_project/components/onenet_esp32/src/3rd/wolfssl/wolfssl-3.15.3/src/: wolfio.c
sample_project/components/onenet_esp32/src/common/: log.c  slist.c  slist.h  utils.c
sample_project/components/onenet_esp32/src/onenet/protocols/mqtt/: mqtt_api.h
sample_project/components/onenet_esp32/src/onenet/protocols/mqtt/paho-mqtt/: mqtt_client.h
sample_project/components/onenet_esp32/src/onenet/security/tls/wolfssl/: config.h
sample_project/components/onenet_esp32/src/onenet/tm/: dev_discov.c  tm_data.c  tm_data.h  tm_mqtt.c  tm_onejson.c  tm_onejson.h  tm_subdev.c  tm_subdev.h  tm_user.c  tm_user.h
sample_project/components/onenet_esp32/src/onenet/utils/: dev_cardmgr.h  dev_token.h
sample_project/main/: CMakeLists.txt  idf_component.yml  main.c
sample_project/main/myapp/: key_app.c  key_app.h  my_onenet.c  my_onenet.h  my_socket.c  my_socket.h  my_wifi_app.c
sample_project/mqtts_onejson_soc_v2.1.3/: CMakeLists.txt  readme.md
sample_project/mqtts_onejson_soc_v2.1.3/3rd/paho-mqtt/: MQTTSerializePublish.c
sample_project/mqtts_onejson_soc_v2.1.3/common/: common.h  data_check.h  log.c  log.h  utils.h
sample_project/mqtts_onejson_soc_v2.1.3/examples/things_model/: main.c  tm_user.c
sample_project/mqtts_onejson_soc_v2.1.3/onenet/protocols/mqtt/paho-mqtt/: mqtt_client.c
sample_project/mqtts_onejson_soc_v2.1.3/onenet/security/tls/: tls.c  tls.h
sample_project/mqtts_onejson_soc_v2.1.3/onenet/security/tls/wolfssl/: user_settings.h
sample_project/mqtts_onejson_soc_v2.1.3/onenet/tm/: aiot_tm_api.c  aiot_tm_api.h  dev_discov.h  tm_mqtt.h  tm_subdev.c
sample_project/mqtts_onejson_soc_v2.1.3/onenet/utils/: dev_cardmgr.c  dev_token.c
